# pytest-agent-eval

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  context7.json  pyproject.toml  versions.json  zensical.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: adapters.md  agents.md  configuration.md  evaluators.md  examples.md  getting-started.md  groups.md  index.md  llms.txt  python-api.md  reporting.md  yaml-api.md
docs/api-reference/: adapters.md  evaluators.md  index.md  models.md
docs/schema/: transcript.json
examples/: README.md
examples/groups/: README.md  conftest.py  pyproject.toml
examples/groups/evals/: edge_case.yaml  happy_path.yaml
examples/multi-turn-judge/: README.md  conftest.py  pyproject.toml
examples/multi-turn-judge/evals/: reschedule.yaml
examples/python-parametrize/: README.md  pyproject.toml  test_city_bookings.py
examples/regex-contains/: README.md  conftest.py  pyproject.toml
examples/regex-contains/evals/: reference_number.yaml
examples/single-turn/: README.md  conftest.py  pyproject.toml
examples/single-turn/evals/: booking.yaml
examples/tool-call-args/: README.md  conftest.py  pyproject.toml
examples/tool-calls/: README.md  conftest.py  pyproject.toml
examples/voice-livekit/: README.md  conftest.py  pyproject.toml
main/: 404.html  index.html  llms-full.txt  search.json  sitemap.xml
main/adapters/: index.html
main/agents/: index.html
main/api-reference/: index.html
main/configuration/: index.html
main/evaluators/: index.html
main/examples/: index.html
main/getting-started/: index.html
main/groups/: index.html
main/python-api/: index.html
main/reporting/: index.html
main/yaml-api/: index.html
overrides/: main.html
scripts/: build_llms_full.py
src/pytest_agent_eval/: __init__.py  config.py  groups.py  models.py  plugin.py  report.py  runner.py  synthesize_audio.py  yaml_loader.py
src/pytest_llm_eval/: __init__.py  config.py  models.py  plugin.py  report.py  runner.py  yaml_loader.py
tests/: test_adapter_args.py  test_config.py  test_contract_sdk.py  test_docs_surface.py  test_evaluators.py  test_examples.py  test_groups.py  test_livekit_adapter.py  test_models.py  test_plugin.py  test_report.py  test_runner.py  test_schema.py  test_smolagents_adapter.py  test_synthesize_audio.py  test_yaml_loader.py
tests/fixtures/: sample_transcript.yaml
v0.1.0/: 404.html  index.html  search.json  sitemap.xml
v0.1.0/adapters/: index.html
v0.1.0/api-reference/: index.html
v0.1.0/configuration/: index.html
v0.1.0/evaluators/: index.html
v0.1.0/getting-started/: index.html
v0.1.0/python-api/: index.html
v0.1.0/reporting/: index.html
v0.1.0/yaml-api/: index.html
v0.2.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.2.0/adapters/: index.html
v0.2.0/api-reference/: index.html
v0.2.0/configuration/: index.html
v0.2.0/evaluators/: index.html
v0.2.0/getting-started/: index.html
v0.2.0/python-api/: index.html
v0.2.0/reporting/: index.html
v0.2.0/yaml-api/: index.html
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/adapters/: index.html
v0.3.0/agents/: index.html
v0.3.0/api-reference/: index.html
v0.3.0/configuration/: index.html
v0.3.0/evaluators/: index.html
v0.3.0/getting-started/: index.html
v0.3.0/groups/: index.html
v0.3.0/python-api/: index.html
v0.3.0/reporting/: index.html
v0.3.0/yaml-api/: index.html
v0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.1/adapters/: index.html
v0.3.1/agents/: index.html
v0.3.1/api-reference/: index.html
v0.3.1/configuration/: index.html
v0.3.1/evaluators/: index.html
v0.3.1/getting-started/: index.html
v0.3.1/groups/: index.html
v0.3.1/python-api/: index.html
v0.3.1/reporting/: index.html
v0.3.1/yaml-api/: index.html
(+47 files in other folders)
