[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-llm-eval"
version = "0.1.0"
description = "A pytest plugin for LLM evaluation tests with threshold-based pass/fail"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["pytest", "llm", "evaluation", "testing", "ai"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.4",
    "pydantic-ai>=0.4.0",
    "pyyaml>=6.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
openai = ["openai>=1.0"]

[project.entry-points.pytest11]
llm_eval = "pytest_llm_eval.plugin"

[project.urls]
Homepage = "https://github.com/YOUR_ORG/pytest-llm-eval"
Documentation = "https://YOUR_ORG.github.io/pytest-llm-eval"
Repository = "https://github.com/YOUR_ORG/pytest-llm-eval"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
    "pre-commit>=4.0",
]
docs = [
    "zensical",
    "mkdocstrings[python]>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_llm_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
