[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-agent-eval"
version = "0.3.1"
description = "A pytest plugin for LLM evaluation tests with threshold-based pass/fail"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["pytest", "llm", "evaluation", "testing", "ai"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.4",
    "pydantic-ai>=0.4.0",
    "pyyaml>=6.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
openai = ["openai>=1.0"]
smolagents = ["smolagents>=1.0"]
livekit = [
    "livekit-agents>=0.12.0",
    "livekit-plugins-openai>=0.10.0",
    "openai>=1.0",
]
xdist = ["pytest-xdist>=3.0"]

[project.entry-points.pytest11]
agent_eval = "pytest_agent_eval.plugin"

[project.urls]
Homepage = "https://github.com/datarootsio/pytest-agent-eval"
Documentation = "https://datarootsio.github.io/pytest-agent-eval"
Repository = "https://github.com/datarootsio/pytest-agent-eval"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
    "pre-commit>=4.0",
    "pytest-xdist>=3.0",
    "jsonschema>=4",
]
docs = [
    "zensical",
    "mkdocstrings[python]>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_agent_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pytester_example_dir = "examples"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D102", "D103", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D102", "D103", "D107"]
"examples/*" = ["D102", "D103", "D107"]
